# atari-go

./: README.md
backend/: .gitignore  AtariGo.cpp  AtariGo.h  BBUtils.h  Board.h  CMakeLists.txt  Globals.h  MINIMAX_OPTIMIZATION_COMPARISON.md  Masks.h  MiniMax.cpp  NeighborMasks.h  RESULTS.md  Zobrist.h  compile_wasm.bat  main.cpp  main.tournament.cpp  unordered_dense.h  wasm_interface.cpp
backend/COMPARISONS/: CPP_VS_WASM.txt
backend/COMPARISONS/DIFFICULTIES/: LEVEL_1_VS_LEVEL_2.txt  LEVEL_3_VS_LEVEL_4.txt  LEVEL_5_VS_LEVEL_6.txt
backend/COMPARISONS/HEURISTIC_COMPUTE_TIME/: BASE_LINE.txt  MEASUREMENT.txt
backend/COMPARISONS/HEURISTIC_FUNCTION/: 1_BASE_VS_BASE.txt  2_MIN_LIB.txt  2_MIN_LIB_1_VS_BASE.txt  3_ATARI_MIN_LIB_1_VS_MIN_LIB_1.txt  3_ATARI_THREAT.txt  4_ATARI_TOTAL-LIB_MIN-LIB-1_VS_ATARI_MIN-LIB-1.txt  4_UNIQUE_LIB.txt  5_STARTING_MIN_LIBERTIES.txt
backend/COMPARISONS/MINIMAX_ALGORITHM/: 0_MINIMAX_NO_OPTIMIZATIONS.md  1_MINIMAX_WITH_PRUNING.txt  2_MINIMAX_WITH_PRUNING_SORTING.md  3_MINIMAX_WITH_PRUNING_SORTING_TT.txt
backend/DIFFICULTIES_COMPARISON/: LEVEL_2_VS_LEVEL_3.txt  LEVEL_4_VS_LEVEL_5.txt
backend/HEURISTIC_COMPARISON/: 1_BASE_VS_BASE.txt  2_MIN_LIB.txt  2_MIN_LIB_1_VS_BASE.txt  3_ATARI_MIN_LIB_1_VS_MIN_LIB_1.txt  3_ATARI_THREAT.txt  4_ATARI_TOTAL-LIB_MIN-LIB-1_VS_ATARI_MIN-LIB-1.txt  4_UNIQUE_LIB.txt  5_ATARI_TOTAL-LIB_MIN-LIB-1_VS_ATARI_TOTAL-LIB_MIN-LIB-1-2-3-4.txt  5_STARTING_MIN_LIBERTIES.txt
docs/: index.html
docs/assets/: index-0UWNvlo2.js  index-2sJFaMR3.css  index-8hrkWS3d.js  index-B1swiLN3.js  (+30 more)
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+34 files in other folders)
